cumulative update (see below for more info)
- Java documentation and unit tests for redesigned module com.github.jh3nd3rs0n.jargyle.protocolbase
- Moved integration tests and resources from integration-testing modules to their respective modules that they test (Purpose is get Jacoco to report code coverage from integration testing)
- Deleted integration-testing modules
- Updated website/documentation/README to reflect changes
- Updated Maven dependencies and LICENSE_3RD_PARTY
- Last empty value in comma-separated strings recognized
- Minor edits in documentation